skip upload steps on CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,10 @@ on:
       projects:
         required: true
         type: string
+      upload:
+        required: false
+        type: boolean
+        default: false
 
 jobs:
   build:
@@ -197,6 +201,7 @@ jobs:
 
       - name: upload bottles
         id: upload
+        if: ${{ inputs.upload }}
         run: pantry/scripts/upload.ts
           --pkgs ${{ needs.build.outputs.built }} ${{ needs.build.outputs.built }}
           --srcs ${{ needs.build.outputs.srcs }} ${{ needs.build.outputs.srcs }}
@@ -210,6 +215,7 @@ jobs:
       #NOTE ideally we’d invalidate all at once so this is atomic
       # however GHA can’t consolidate outputs from a matrix :/
       - uses: chetan/invalidate-cloudfront-action@v2
+        if: ${{ inputs.upload }}
         env:
           PATHS: ${{ steps.upload.outputs.cf-invalidation-paths }}
           DISTRIBUTION: ${{ secrets.AWS_CF_DISTRIBUTION_ID }}
