--- a/.github/workflows/new-version.yml
+++ b/.github/workflows/new-version.yml
@@ -13,4 +13,5 @@ jobs:
     uses: ./.github/workflows/build.yml
     with:
       projects: ${{ inputs.projects }}
+      upload: true
     secrets: inherit
