build something on every CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,5 @@ jobs:
     needs: [get-diff]
     uses: ./.github/workflows/build.yml
     with:
-      projects: ${{ needs.get-diff.outputs.diff }}
+      projects: ${{ needs.get-diff.outputs.diff || 'zlib.net' }}
     secrets: inherit
-    if: ${{ needs.get-diff.outputs.diff != '' }}
