--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,6 +73,8 @@ jobs:
               xargs -0 -I{} cp -Rv {} /opt/tea.xyz/var/pantry
           cp -a cli /opt/tea.xyz/var/
 
+      - run: find /opt/tea.xyz/var/pantry
+
       - run: /opt/tea.xyz/var/pantry/scripts/sort.ts ${{ inputs.projects }}
         id: sorted
 
