--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -139,7 +139,7 @@ jobs:
       - uses: teaxyz/setup@v0
         id: tea
         with:
-          srcroot: pantry
+          srcroot: ${{ github.workspace }}/pantry
           prefix: ${{ github.workspace }}
 
       - uses: actions/download-artifact@v3
