--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -189,7 +189,7 @@ jobs:
       - uses: teaxyz/setup@v0
         id: tea
         with:
-          srcroot: .
+          srcroot: tea.xyz/var/pantry
           prefix: ${{ github.workspace }}
 
       - name: overlay our pantry
