--- a/projects/deno.land/package.yml
+++ b/projects/deno.land/package.yml
@@ -31,6 +31,7 @@ build:
   dependencies:
     git-scm.org: 2       # to build tinycc
     rust-lang.org: 1
+    rust-lang.org/cargo: ^0.65
     llvm.org: '>=13'     # macOS/aarch64 requires this (FIXME only dep where needed)
     curl.se: '*'         # required to download v8 (python is another option)
     tea.xyz/gx/make: '*' # required to build the libffi parts
