--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,12 +66,12 @@ jobs:
             ;;
           esac
 
-          # noop for pantry.core but needed for pantry.extra etc.
+        - run: # noop for pantry.core but needed for pantry.extra etc.
           cp -nR \
             /opt/tea.xyz/var/pantry/scripts \
             /opt/tea.xyz/var/pantry/import-map.json \
             pantry
-          cd pantry && ln -sf ../cli/src
+        - run: cd pantry && ln -sf ../cli/src
 
       - run: pantry/scripts/sort.ts ${{ inputs.projects }}
         id: sorted
