--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,13 +73,15 @@ jobs:
       - run: /opt/tea.xyz/var/pantry/scripts/sort.ts ${{ inputs.projects }}
         id: sorted
 
+      - run: /opt/tea.xyz/var/pantry/scripts/deps.ts -b ${{ steps.sorted.outputs.pkgs }}
+        id: deps
+
+      - run: cli/scripts/install.ts ${{ steps.deps.outputs.pkgs }}
+
       # running out of /opt because only pantry.core has these scripts
-      - run: /opt/tea.xyz/var/pantry/scripts/build.ts ${{ steps.sorted.outputs.pkgs }}
+      - run: /opt/tea.xyz/var/pantry/scripts/build.plumbing.ts ${{ steps.sorted.outputs.pkgs }}
         id: build
         env:
-          # GITHUB_TOKEN doesn't have private access to teaxyz/cli.
-          # TODO restore to ${{ github.token }} when public
-          GITHUB_TOKEN: ${{ secrets.TEMP_JACOBS_GITHUB_PAT }}
           FORCE_UNSAFE_CONFIGURE: 1  # some configure scripts refuse to run as root
 
       # tarring ourselves ∵ GHA-artifacts (ludicrously) lose permissions
