--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,6 +70,12 @@ jobs:
 
           ln -s $GITHUB_WORKSPACE/cli /opt/tea.xyz/var/cli
 
+          # in case this PR contains updates to the scripts
+          #TODO only do for PRs
+          if test "$GITHUB_REPOSITORY" = "pantry.core"; then
+            cp -r pantry/scripts/* /opt/tea.xyz/var/pantry/scripts
+          fi
+
       - run: /opt/tea.xyz/var/pantry/scripts/sort.ts ${{ inputs.projects }}
         id: sorted
 
