--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,11 +72,9 @@ jobs:
 
           # in case this PR contains updates to the scripts
           #TODO only do for PRs
-          if test "$GITHUB_REPOSITORY" = "pantry.core"; then
+          if test "$GITHUB_REPOSITORY" = "teaxyz/pantry.core"; then
             cp -r pantry/scripts/* /opt/tea.xyz/var/pantry/scripts
           fi
-
-          echo x$GITHUB_REPOSITORY x
 
       - run: /opt/tea.xyz/var/pantry/scripts/sort.ts ${{ inputs.projects }}
         id: sorted
