--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,7 +73,7 @@ jobs:
           # in case this PR contains updates to the scripts
           #TODO only do for PRs
           if test "$GITHUB_REPOSITORY" = "teaxyz/pantry.core"; then
-            cp -r pantry/scripts/* /opt/tea.xyz/var/pantry/scripts
+            cp -rv pantry/scripts/* /opt/tea.xyz/var/pantry/scripts
           fi
 
       - run: /opt/tea.xyz/var/pantry/scripts/sort.ts ${{ inputs.projects }}
