--- a/projects/gnu.org/libtool/package.yml
+++ b/projects/gnu.org/libtool/package.yml
@@ -28,8 +28,9 @@ build:
       libtoolize
     rm libtoolize.bak
 
-    # an often expected alias
+    # often expected aliases
     ln -s libtoolize glibtoolize
+    ln -s libtool glibtool
 
 test:
   dependencies:
