add `interprets:` key to appropriate packages

--- a/projects/deno.land/package.yml
+++ b/projects/deno.land/package.yml
@@ -9,8 +9,10 @@ provides:
   - bin/deno
 
 interprets:
-  - .ts
-  - .js
+  ts:
+    - deno
+    - run
+  # js: deno # nodejs.org for now
 
 build:
   script: |
