--- a/projects/python.org/package.yml
+++ b/projects/python.org/package.yml
@@ -12,6 +12,9 @@ provides:
   - bin/python
   - bin/python3  #FIXME this is only true of python 3
 
+interprets:
+  py: python
+
 dependencies:
 # recommended (but none are actually required)
   zlib.net: 1
