go needs GOCACHE

--- a/projects/go.dev/package.yml
+++ b/projects/go.dev/package.yml
@@ -27,6 +27,9 @@ build:
     go.dev: '*'
   working-directory: src
   script: |-
+    # `make.bash` complains about unset GOCACHE and HOME otherwise
+    export GOCACHE="$(pwd)/.gocache"
+
     ./make.bash
 
     # cleanup
