add `provides:` where missing

--- a/projects/darwinsys.com/file/package.yml
+++ b/projects/darwinsys.com/file/package.yml
@@ -23,3 +23,6 @@ build:
 test: |
   file {{prefix}}/bin/file
 #TODO check output, we don’t since it varies by platform annoyingly
+
+provides:
+  - bin/file
