--- a/projects/freedesktop.org/fontconfig/package.yml
+++ b/projects/freedesktop.org/fontconfig/package.yml
@@ -28,3 +28,14 @@ build:
 
 test:
   fc-list
+
+provides:
+  - bin/fc-cache
+  - bin/fc-cat
+  - bin/fc-conflist
+  - bin/fc-list
+  - bin/fc-match
+  - bin/fc-pattern
+  - bin/fc-query
+  - bin/fc-scan
+  - bin/fc-validate
