--- a/projects/freedesktop.org/shared-mime-info/package.yml
+++ b/projects/freedesktop.org/shared-mime-info/package.yml
@@ -27,3 +27,6 @@ build:
 #see: https://www.freedesktop.org/wiki/Specifications/shared-mime-info-spec/
 test: |
   test -f "{{prefix}}"/share/mime/packages/freedesktop.org.xml
+
+provides:
+  - bin/update-mime-database
