--- a/projects/git-scm.org/package.yml
+++ b/projects/git-scm.org/package.yml
@@ -46,3 +46,12 @@ test: |
   git init
   git add .
   test "$(git diff --name-only --cached)" = "testfile"
+
+provides:
+  - bin/git
+  - bin/git-cvsserver
+  - bin/git-receive-pack
+  - bin/git-shell
+  - bin/git-upload-archive
+  - bin/git-upload-pack
+  - bin/scalar
