--- a/projects/gnu.org/bison/package.yml
+++ b/projects/gnu.org/bison/package.yml
@@ -31,3 +31,6 @@ test:
     test pass = $(echo "((()(())))()" | ./a.out)
     test fail = $(echo "())" | ./a.out)
 
+provides:
+  - bin/bison
+  - bin/yacc
