--- a/projects/ijg.org/package.yml
+++ b/projects/ijg.org/package.yml
@@ -28,3 +28,10 @@ test:
   script: |
     curl $FIXTURE > test.jpeg
     djpeg test.jpeg
+
+provides:
+  - bin/cjpeg
+  - bin/djpeg
+  - bin/jpegtran
+  - bin/rdjpgcom
+  - bin/wrjpgcom
