--- a/projects/invisible-island.net/ncurses/package.yml
+++ b/projects/invisible-island.net/ncurses/package.yml
@@ -30,3 +30,16 @@ build:
 
 test:
   script: true  #FIXME
+
+provides:
+  - bin/captoinfo
+  - bin/clear
+  - bin/infocmp
+  - bin/infotocap
+  - bin/ncursesw6-config
+  - bin/reset
+  - bin/tabs
+  - bin/tic
+  - bin/toe
+  - bin/tput
+  - bin/tset
