--- a/projects/libexpat.github.io/package.yml
+++ b/projects/libexpat.github.io/package.yml
@@ -20,3 +20,6 @@ test:
     cc test.c -lexpat -o test
     OUTPUT="$(./test)"
     test "$OUTPUT" = "tag:str|data:Hello, world!|"
+
+provides:
+  - bin/xmlwf
