--- a/projects/libpng.org/package.yml
+++ b/projects/libpng.org/package.yml
@@ -29,3 +29,9 @@ test:
   script: |
     cc test.c -lpng
     ./a.out
+
+provides:
+  - bin/libpng-config
+  - bin/libpng16-config
+  - bin/png-fix-itxt
+  - bin/pngfix
