--- a/projects/nasm.us/package.yml
+++ b/projects/nasm.us/package.yml
@@ -16,3 +16,16 @@ build:
 
 test: |
   nasm --version
+
+provides:
+  - bin/ldrdf
+  - bin/nasm
+  - bin/ndisasm
+  - bin/rdf2bin
+  - bin/rdf2com
+  - bin/rdf2ihx
+  - bin/rdf2ith
+  - bin/rdf2srec
+  - bin/rdfdump
+  - bin/rdflib
+  - bin/rdx
