--- a/projects/pcre.org/package.yml
+++ b/projects/pcre.org/package.yml
@@ -32,3 +32,8 @@ build:
 
 test:
   script: pcregrep "regular expression" {{ prefix }}/share/doc/pcre/README
+
+provides:
+  - bin/pcre-config
+  - bin/pcregrep
+  - bin/pcretest
