--- a/projects/tea.xyz/gx/cc/package.yml
+++ b/projects/tea.xyz/gx/cc/package.yml
@@ -41,3 +41,15 @@ build:
 test: |
   cc --version
   ld --help
+
+provides:
+  - bin/c++
+  - bin/cc
+  - bin/clang
+  - bin/clang++
+  - bin/g++
+  - bin/gcc
+  - bin/ld
+  - bin/ld64.lld
+  - bin/lld
+  - bin/lld-link
