--- a/projects/tukaani.org/xz/package.yml
+++ b/projects/tukaani.org/xz/package.yml
@@ -21,3 +21,28 @@ build:
 
 test:
   script: xz --version
+
+provides:
+  - bin/lzcat
+  - bin/lzcmp
+  - bin/lzdiff
+  - bin/lzegrep
+  - bin/lzfgrep
+  - bin/lzgrep
+  - bin/lzless
+  - bin/lzma
+  - bin/lzmadec
+  - bin/lzmainfo
+  - bin/lzmore
+  - bin/unlzma
+  - bin/unxz
+  - bin/xz
+  - bin/xzcat
+  - bin/xzcmp
+  - bin/xzdec
+  - bin/xzdiff
+  - bin/xzegrep
+  - bin/xzfgrep
+  - bin/xzgrep
+  - bin/xzless
+  - bin/xzmore
