--- a/projects/unicode.org/package.yml
+++ b/projects/unicode.org/package.yml
@@ -37,3 +37,17 @@ test:
   fixture: |
     hello
     world
+
+provides:
+  - bin/derb
+  - bin/genbrk
+  - bin/gencfu
+  - bin/gencnval
+  - bin/gendict
+  - bin/genrb
+  - bin/icu-config
+  - bin/icuexportdata
+  - bin/icuinfo
+  - bin/makeconv
+  - bin/pkgdata
+  - bin/uconv
