--- a/projects/curl.se/package.yml
+++ b/projects/curl.se/package.yml
@@ -30,3 +30,7 @@ test:
     curl --proto '=https' --tlsv1.2 -sSf https://get-ghcup.haskell.org
 
 # TODO need to fix the .la file
+
+provides:
+  - bin/curl
+  - bin/curl-config
