--- a/projects/gnu.org/fribidi/package.yml
+++ b/projects/gnu.org/fribidi/package.yml
@@ -20,3 +20,6 @@ test:
   script: |
     out="$(fribidi --charset=CapRTL --clean --nobreak $FIXTURE)"
     test "$out" = "a simple TSet that"
+
+provides:
+  - bin/fribidi
