--- a/projects/gnu.org/gettext/package.yml
+++ b/projects/gnu.org/gettext/package.yml
@@ -28,3 +28,27 @@ build:
     make install
 
 test: gettext test
+
+provides:
+  - bin/autopoint
+  - bin/envsubst
+  - bin/gettext
+  - bin/gettext.sh
+  - bin/gettextize
+  - bin/msgattrib
+  - bin/msgcat
+  - bin/msgcmp
+  - bin/msgcomm
+  - bin/msgconv
+  - bin/msgen
+  - bin/msgexec
+  - bin/msgfilter
+  - bin/msgfmt
+  - bin/msggrep
+  - bin/msginit
+  - bin/msgmerge
+  - bin/msgunfmt
+  - bin/msguniq
+  - bin/ngettext
+  - bin/recode-sr-latin
+  - bin/xgettext
