Switch from http to https

--- a/projects/gnu.org/autoconf/package.yml
+++ b/projects/gnu.org/autoconf/package.yml
@@ -1,5 +1,5 @@
 distributable:
-  url: http://ftp.gnu.org/gnu/autoconf/autoconf-{{ version.raw }}.tar.xz
+  url: https://ftp.gnu.org/gnu/autoconf/autoconf-{{ version.raw }}.tar.xz
   strip-components: 1
 
 versions:
