--- a/projects/gnu.org/libtool/package.yml
+++ b/projects/gnu.org/libtool/package.yml
@@ -1,5 +1,5 @@
 distributable:
-  url: http://ftp.gnu.org/gnu/libtool/libtool-{{ version }}.tar.xz
+  url: https://ftp.gnu.org/gnu/libtool/libtool-{{ version }}.tar.xz
   strip-components: 1
 
 #FIXME: need versions
