--- a/projects/gnu.org/automake/package.yml
+++ b/projects/gnu.org/automake/package.yml
@@ -1,5 +1,5 @@
 distributable:
-  url: http://ftp.gnu.org/gnu/automake/automake-{{ version }}.tar.xz
+  url: https://ftp.gnu.org/gnu/automake/automake-{{ version }}.tar.xz
   strip-components: 1
 
 #FIXME: need to parse versions from someplace
