--- a/projects/ijg.org/package.yml
+++ b/projects/ijg.org/package.yml
@@ -3,7 +3,7 @@
 # semantic versions with a `versions.ts` script
 
 distributable:
-  url: http://jpegclub.org/reference/wp-content/uploads/2022/01/jpegsrc.v9e.tar.gz
+  url: https://jpegclub.org/reference/wp-content/uploads/2022/01/jpegsrc.v9e.tar.gz
   strip-components: 1
 
 versions:
