--- a/projects/pyyaml.org/package.yml
+++ b/projects/pyyaml.org/package.yml
@@ -1,5 +1,5 @@
 distributable:
-  url: http://pyyaml.org/download/libyaml/yaml-{{version}}.tar.gz
+  url: https://pyyaml.org/download/libyaml/yaml-{{version}}.tar.gz
   strip-components: 1
 
 versions:
