--- a/projects/go.dev/package.yml
+++ b/projects/go.dev/package.yml
@@ -10,7 +10,8 @@ provides:
   - bin/go
 
 interprets:
-  go: [go, run]
+  extensions: go
+  args: [go, run]
 
 dependencies:
   # `cgo` requires a C compiler
