--- a/projects/python.org/package.yml
+++ b/projects/python.org/package.yml
@@ -13,7 +13,8 @@ provides:
   - bin/python3  #FIXME this is only true of python 3
 
 interprets:
-  py: [python]
+  extensions: py
+  args: python
 
 dependencies:
 # recommended (but none are actually required)
