deno: disable update check

--- a/projects/deno.land/package.yml
+++ b/projects/deno.land/package.yml
@@ -13,6 +13,10 @@ interprets:
   extensions: ts
   args: [deno, run]
 
+runtime:
+  env:
+    DENO_NO_UPDATE_CHECK: "true"
+
 build:
   script: |
     # https://github.com/denoland/deno/issues/15596 -- reported fixed in 1.25.3
