this might be needed in other projects :(

--- a/projects/freedesktop.org/pkg-config/package.yml
+++ b/projects/freedesktop.org/pkg-config/package.yml
@@ -31,6 +31,8 @@ build:
       - --with-internal-glib
       # otherwise the defaults are based on our {{prefix}}
       - --with-pc-path=/usr/lib/pkgconfig:/usr/share/pkgconfig
+    # llvm15 changed this to hard error
+    CFLAGS: -Wno-error=int-conversion
 
 test:
   script: pkg-config --version
